
cargo-features = ["strip"]

[package]
name = "akairo"
version = "0.1.0"
authors = ["Ausakura <17104706+Ausakura@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sekkei = { git = "https://github.com/kuragarimoe/sekkei" }

[profile.release]
strip = "symbols"